# charmelio_task

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  Makefile  OPTIMIZATION.md  PORTS.md  QUICK_REFERENCE.md  README.md  SETUP.md  VERIFICATION.md  WORKER_EXPLAINED.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.agent/: CODEX.md  session_memory.md
.agent/docs/: EXECPLAN_T03.md  EXECPLAN_T04.md  EXECPLAN_T05.md  EXECPLAN_T06.md  EXECPLAN_T07.md  EXECPLAN_T08.md  EXECPLAN_T09.md  EXECPLAN_T10.md  EXECPLAN_T11_T12.md
.claude/agents/: architect.md  code-reviewer.md  design-reviewer.md  devops-expert.md  onboarding-assistant.md  test-writer.md
.claude/memory/: session_2025-12-18.md  session_2025-12-19.md
.claude/slash-commands/: test-retrieval.md  validate-watcher.md
.claude/workflows/: pipeline-review.yaml
alembic/: env.py
alembic/versions/: 0001_init.py
app/: deps.py  main.py
app/core/: config.py  logging.py
app/db/: __init__.py  migrations.py  models.py  repository.py  session.py
app/routes/: __init__.py  documents.py  extractions.py  (+1 more)
sample_contracts/: Law_Insider_rse-collection-llc_service-agreement-for-transfer-agent-services-to-rse-collection-llc_Filed_12-10-2021_Contract (1).docx  Long Form MSA_after_opening_censored.docx
scripts/: e2e_demo.py  entrypoint.sh
tests/: conftest.py  test_activities.py  test_api_extractions.py  test_database.py  test_extract.py  test_health.py  test_llm_extractor.py  test_logging.py  test_pdf_parser.py  test_repository.py  test_session_utils.py  test_storage_minio.py  test_workflows.py
worker/: activities.py  config.py  llm_extractor.py  run.py  workflows.py
(+9 files in other folders)
